// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenderCommand should render a custom child command 1`] = `
<div>
  <div>
    <div
      class="atom-item"
    >
      <span>
        Start All Data Imports
      </span>
      <kbd
        class="atom-shortcut"
      />
    </div>
  </div>
</div>
`;

exports[`RenderCommand should render the default child command 1`] = `
<div>
  <div
    class="item"
  >
    <span>
      Start All Data Imports
    </span>
  </div>
</div>
`;
